# moon

./: LICENSE  README.md  pyproject.toml
docs/: reaction_mechanism.md
docs/science/: heat_transfer.md
scripts/: script.py
src/moon/: __init__.py
src/moon/combustion_models/: __init__.py  _combustion_models.py  _entrain_rate.py  entrain_rate.py
src/moon/ecs/components/: __init__.py  _combustion_model.py  _component.py  _crankshaft.py  _cylinder_geometry.py  _environment.py  _heat_transfer_model.py  _hierarchy.py  _injector.py  _reaction_mechanism.py  _spark_plug.py  _valve.py
src/moon/ecs/entities/: __init__.py  _entities.py
src/moon/ecs/systems/: _init_systems.py  _process_systems.py  network_resource.py  system.py  tools.py
src/moon/flame_speed/: __init__.py  _flame_speed.py
src/moon/flame_speed/fit_coefficients/: hydrogen_methanol.csv
src/moon/fuel/: __init__.py
src/moon/geometry/: __init__.py  _engine_geometry.py
src/moon/heat_transfer/: __init__.py  _heat_transfer.py
src/moon/reaction_mechanism/: __init__.py
src/moon/reaction_mechanism/yamls/: ARAOP.yaml  Issayev.yaml  Li.yaml  UT-LCS.yaml
src/moon/tools/: __init__.py  decorators.py  engine_performance.py
