[project]
name = "moon-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "cantera>=3.1.0",
    "esper>=3.4",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.1",
]
